--- a/Ejercicios/ej3/styles.css
+++ b/Ejercicios/ej3/styles.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -85,6 +88,11 @@ form > input, form > textarea, form > button {
     border-radius: 20px;
     padding: 5px 10px;
     margin-top: 5px;
+    
+}
+form > button {
+    color: rgb(235, 233, 233);
+    background-color :rgb(147, 80, 255);
 }
 
 /* footer */
