--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -3,6 +3,18 @@ html, body {
     padding: 0;
     scroll-behavior: smooth;
 }
+/* Header */
+.header {
+    height: 100vh;
+    width: auto;
+}
+.slider-control {
+    width: 50px; 
+    height: 50px;
+}
+.slider-img {
+    max-height: 100vh;
+}
 
 #popup__section {
     background: linear-gradient (rgba(25,25,25,0.5), rgb(96,185,203));
