--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -2,10 +2,10 @@ html, body {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /* Header */
 .header {
-    height: 100vh;
     width: auto;
 }
 @media(max-width: 576px){
@@ -20,10 +20,44 @@ html, body {
 .slider-img {
     max-height: 100vh;
 }
+
+/* Seccion lenguajes */
 .card-image {
     height: 40%;
     width: auto;
     padding-top: 15px;
+}
+
+/* Galeria */
+
+.galery-item {
+    height: 350px;
+    background-size: cover;
+    background-position: center;
+}
+.galery-item__hover {
+    background-color: rgba(25,25,25,0.7);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: .5s;
+}
+
+.galery-item:hover .galery-item__hover {
+    cursor: pointer;
+    opacity: 1;
+    transition: .7s;
+}
+.galery-item__hover i, .galery-item__hover p {
+    color: rgb(221, 221, 221);
+    font-size: 30px;
 }
 
 #popup__section {
