--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -4,6 +4,10 @@ html, body {
     scroll-behavior: smooth;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+/* Navbar */
+.navbar {
+    border-bottom: 2px solid rgb(44, 44, 44);
+}
 /* Header */
 .header {
     width: auto;
@@ -21,7 +25,7 @@ html, body {
     max-height: 100vh;
 }
 
-/* Seccion lenguajes */
+/* Lenguajes */
 .card-image {
     height: 40%;
     width: auto;
@@ -29,7 +33,6 @@ html, body {
 }
 
 /* Galeria */
-
 .galery-item {
     height: 350px;
     background-size: cover;
