--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -86,7 +86,7 @@ html, body {
 @media(min-width: 768px){
     .calltoaction__container--img {
         display: block;
-        background-image: url(/Final/img/calltoaction.jpg); 
+        background-image: url(../img/calltoaction.jpg); 
         background-position: top; 
         background-size: cover;
     }
