--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -1,8 +1,12 @@
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
 /* Navbar */
 .navbar {
@@ -78,6 +82,10 @@ html, body {
 .calltoaction__container {
     background: linear-gradient(90deg, rgba(217,215,220,1) 0%, rgba(200,204,207,1) 50%, rgba(218,222,225,1) 71%, rgba(218,222,225,1) 100%);
 }
+.calltoaction__container h3 {
+    font-family: 'Architects Daughter', cursive;
+    font-style: italic;
+}
 .calltoaction__container--img {
     display: none;
     min-height: 100% ;
@@ -96,6 +104,10 @@ html, body {
 }
 .footer  i {
  font-size: 2rem;
+}
+
+.footer__contacto {
+    
 }
 /* Popup */ 
 #popup__section {
