--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -25,6 +25,9 @@ html, body {
         margin-top: 0px;
     }
 }
+.header-secondary{
+    min-height: 20vh ;
+}
 .slider-control {
     width: 50px; 
     height: 50px;
