--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -44,11 +44,18 @@ html, body {
 }
 
 /* Formularios */
+.input-group {
+ align-items: end;   
+}
+.input-group-text {
+    height: 38px;
+}
 .form-control {
     border: none;
     border-bottom: 2px solid black;
-    background: none;
+    background: rgb(255, 255, 255);
     border-radius: 0px;
+    margin: 10px 0px; 
 }
 
 /* Galeria */
